Update customer review images to show black people

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <!-- Review 1 -->
                 <div class="review-card">
                     <div class="flex items-center mb-4">
-                        <img src="https://i.pravatar.cc/150?img=1" alt="Customer" class="w-16 h-16 rounded-full mr-4">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=150&h=150&fit=crop&crop=faces" alt="Customer" class="w-16 h-16 rounded-full mr-4 object-cover">
                         <div>
                             <h4 class="font-bold text-lg">James Mwangi</h4>
                             <div class="text-gold">★★★★★</div>
@@ -168,7 +168,7 @@
                 <!-- Review 2 -->
                 <div class="review-card">
                     <div class="flex items-center mb-4">
-                        <img src="https://i.pravatar.cc/150?img=5" alt="Customer" class="w-16 h-16 rounded-full mr-4">
+                        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=150&h=150&fit=crop&crop=faces" alt="Customer" class="w-16 h-16 rounded-full mr-4 object-cover">
                         <div>
                             <h4 class="font-bold text-lg">Sarah Wanjiku</h4>
                             <div class="text-gold">★★★★★</div>
@@ -180,7 +180,7 @@
                 <!-- Review 3 -->
                 <div class="review-card">
                     <div class="flex items-center mb-4">
-                        <img src="https://i.pravatar.cc/150?img=12" alt="Customer" class="w-16 h-16 rounded-full mr-4">
+                        <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=150&h=150&fit=crop&crop=faces" alt="Customer" class="w-16 h-16 rounded-full mr-4 object-cover">
                         <div>
                             <h4 class="font-bold text-lg">David Ochieng</h4>
                             <div class="text-gold">★★★★★</div>
@@ -192,7 +192,7 @@
                 <!-- Review 4 -->
                 <div class="review-card">
                     <div class="flex items-center mb-4">
-                        <img src="https://i.pravatar.cc/150?img=20" alt="Customer" class="w-16 h-16 rounded-full mr-4">
+                        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=150&h=150&fit=crop&crop=faces" alt="Customer" class="w-16 h-16 rounded-full mr-4 object-cover">
                         <div>
                             <h4 class="font-bold text-lg">Grace Akinyi</h4>
                             <div class="text-gold">★★★★★</div>
@@ -204,7 +204,7 @@
                 <!-- Review 5 -->
                 <div class="review-card">
                     <div class="flex items-center mb-4">
-                        <img src="https://i.pravatar.cc/150?img=33" alt="Customer" class="w-16 h-16 rounded-full mr-4">
+                        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=150&h=150&fit=crop&crop=faces" alt="Customer" class="w-16 h-16 rounded-full mr-4 object-cover">
                         <div>
                             <h4 class="font-bold text-lg">Michael Kipchoge</h4>
                             <div class="text-gold">★★★★★</div>
@@ -216,7 +216,7 @@
                 <!-- Review 6 -->
                 <div class="review-card">
                     <div class="flex items-center mb-4">
-                        <img src="https://i.pravatar.cc/150?img=47" alt="Customer" class="w-16 h-16 rounded-full mr-4">
+                        <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?w=150&h=150&fit=crop&crop=faces" alt="Customer" class="w-16 h-16 rounded-full mr-4 object-cover">
                         <div>
                             <h4 class="font-bold text-lg">Linda Chebet</h4>
                             <div class="text-gold">★★★★★</div>
@@ -228,7 +228,7 @@
                 <!-- Review 7 -->
                 <div class="review-card">
                     <div class="flex items-center mb-4">
-                        <img src="https://i.pravatar.cc/150?img=68" alt="Customer" class="w-16 h-16 rounded-full mr-4">
+                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=150&h=150&fit=crop&crop=faces" alt="Customer" class="w-16 h-16 rounded-full mr-4 object-cover">
                         <div>
                             <h4 class="font-bold text-lg">Peter Kamau</h4>
                             <div class="text-gold">★★★★★</div>
